--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>COMMITMENT</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
     
+    <script src="js/script.js"></script>
 </body>
 </html>
