--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
-    
+    <div class="grid-container">
+        <div class="item1"></div>
+    </div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
