--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="grid-container">
         <div class="item1"></div>
+        <div class="item2"></div>
+        <div class="item3"></div>
     </div>
 
     <script src="js/script.js"></script>
