--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <div class="item1"></div>
         <div class="item2"></div>
         <div class="item3"></div>
+        <div class="item4"></div>
+        <div class="item5"></div>
+        <div class="item6"></div>
+        <div class="item7"></div>
+    </div>
+    <div class="grid-container">
+        <div class="fullwidth">
+            <img src="img/rh/rh1.png" alt="rose hand" onmouseover="this.src='img/rh/rh2.png';" onmouseout="this.src='img/rh/rh1.png'">
+        </div>
     </div>
 
     <script src="js/script.js"></script>
