a bunch of things

--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
-
-    <div class="bgText">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec dui a mi maximus rutrum in a justo. Suspendisse et pellentesque odio, vitae mattis magna. Sed sit amet quam eget tellus placerat dignissim eu vel elit. Vivamus ut libero bibendum, iaculis lorem sit amet, interdum quam. 
-    </div>
-
-    <div class="grid-container low">
-        <div class="item1"></div>
-        <div class="item2"></div>
-        <div class="item3"></div>
-        <div class="item4"></div>
-        <div class="item5"></div>
-        <div class="item6"></div>
-        <div class="item7"></div>
-    </div>
     <div class="grid-container">
+        <div class="item1" onmouseover="showColor('.item1','rgb(0,0,255)')" onmouseout="showBlack('.item1')"></div>
+        <div class="text1" onmouseover="showTextColor('.text1','rgb(255,255,255)')" onmouseout="showTextBlack('.text1')"> WELCOME</div>
+        <div class="item2" onmouseover="showColor('.item2','rgb(255,255,0)')" onmouseout="showBlack('.item2')"></div>
+        <div class="item3" onmouseover="showColor('.item3','rgb(255,0,0)')" onmouseout="showBlack('.item3')"></div>
+        <div class="item4" onmouseover="showColor('.item4','rgb(0,255,255)')" onmouseout="showBlack('.item4')"></div>
+        <div class="item5" onmouseover="showColor('.item5','rgb(0,255,0)')" onmouseout="showBlack('.item5')"></div>
+        <div class="item6" onmouseover="showColor('.item6','rgb(255,0,255)')" onmouseout="showBlack('.item6')"></div>
+        <div class="item7" onmouseover="showColor('.item7','rgb(255,255,255)')" onmouseout="showBlack('.item7')"></div>
+        <div class="item8" onmouseover="showColor('.item8','rgb(255,0,0)')" onmouseout="showBlack('.item8')"></div>
+        <div class="item9" onmouseover="showColor('.item9','rgb(0,255,0)')" onmouseout="showBlack('.item9')"></div>
+        <div class="item10" onmouseover="showColor('.item10','rgb(0,0,255)')" onmouseout="showBlack('.item10')"></div>
+    </div>
+    <div class="">
         <div class="fullwidth">
             <img src="img/rh/rh1.png" alt="rose hand" id="rh" onmouseover="runAnimation()" onmouseout="stopAnimation()">
         </div>
