--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
         <div class="item1" onmouseover="showColor('.item1','rgb(0,0,255)')" onmouseout="showBlack('.item1')"></div>
         <div class="text1" onmouseover="showTextColor('.text1','rgb(255,255,255)')" onmouseout="showTextBlack('.text1')"> WELCOME</div>
         <div class="item2" onmouseover="showColor('.item2','rgb(255,255,0)')" onmouseout="showBlack('.item2')"></div>
+        <div class="text2" onmouseover="showTextColor('.text2','rgb(255,255,255)')" onmouseout="showTextBlack('.text2')"> TO </div>
         <div class="item3" onmouseover="showColor('.item3','rgb(255,0,0)')" onmouseout="showBlack('.item3')"></div>
+        <div class="text3" onmouseover="showTextColor('.text3','rgb(255,255,255)')" onmouseout="showTextBlack('.text3')"> THE </div>
         <div class="item4" onmouseover="showColor('.item4','rgb(0,255,255)')" onmouseout="showBlack('.item4')"></div>
+        <div class="text4" onmouseover="showTextColor('.text4','rgb(255,255,255)')" onmouseout="showTextBlack('.text4')"> SHIT </div>
         <div class="item5" onmouseover="showColor('.item5','rgb(0,255,0)')" onmouseout="showBlack('.item5')"></div>
+        <div class="text5" onmouseover="showTextColor('.text5','rgb(255,255,255)')" onmouseout="showTextBlack('.text5')"> SHOW </div>
         <div class="item6" onmouseover="showColor('.item6','rgb(255,0,255)')" onmouseout="showBlack('.item6')"></div>
         <div class="item7" onmouseover="showColor('.item7','rgb(255,255,255)')" onmouseout="showBlack('.item7')"></div>
         <div class="item8" onmouseover="showColor('.item8','rgb(255,0,0)')" onmouseout="showBlack('.item8')"></div>
