--- a/index.html
+++ b/index.html
@@ -31,9 +31,18 @@
         </div>
     </div>
     <div class="grid-container">
-        <div class="star1">
-            <div id="star-five"></div>
-        </div>
+        <div class="star1"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star1')" onmouseout="hideStar('.star1')" style="grid-row: 1;">
+             C </div>
+        <div class="star2"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star2')" onmouseout="hideStar('.star2')" style="grid-row: 2;">
+             O </div>
+        <div class="star3"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star3')" onmouseout="hideStar('.star3')" style="grid-row: 3;">
+            M </div>
+        <div class="star4"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star4')" onmouseout="hideStar('.star4')" style="grid-row: 4;">
+            M </div>
         
     </div>
     <script src="js/script.js"></script>
