--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         <div class="star4"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star4')" onmouseout="hideStar('.star4')" style="grid-row: 4;">
             M </div>
+        <div class="star5"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star5')" onmouseout="hideStar('.star5')" style="grid-row: 5;">
+            I </div>
+        <div class="star6"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star6')" onmouseout="hideStar('.star6')" style="grid-row: 6;">
+            T </div>
         
     </div>
     <script src="js/script.js"></script>
