--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="img/rh/rh1.png" alt="rose hand" id="rh" onmouseover="runAnimation()" onmouseout="stopAnimation()">
         </div>
     </div>
-    <div class="grid-container">
+    <div class="star-grid-container">
         <div class="star1"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star1')" onmouseout="hideStar('.star1')" style="grid-row: 1;">
              C </div>
