--- a/index.html
+++ b/index.html
@@ -30,25 +30,32 @@
             <img src="img/rh/rh1.png" alt="rose hand" id="rh" onmouseover="runAnimation()" onmouseout="stopAnimation()">
         </div>
     </div>
+    <!-- Звездная ночь ЗВЕЗДНАЯ НОЧЬ -->
     <div class="star-grid-container">
         <div class="star1"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star1')" onmouseout="hideStar('.star1')" style="grid-row: 1;">
-             C </div>
+            З </div>
         <div class="star2"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star2')" onmouseout="hideStar('.star2')" style="grid-row: 2;">
-             O </div>
+            В </div>
         <div class="star3"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star3')" onmouseout="hideStar('.star3')" style="grid-row: 3;">
-            M </div>
+            Е </div>
         <div class="star4"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star4')" onmouseout="hideStar('.star4')" style="grid-row: 4;">
-            M </div>
+            З </div>
         <div class="star5"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star5')" onmouseout="hideStar('.star5')" style="grid-row: 5;">
-            I </div>
+            Д </div>
         <div class="star6"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star6')" onmouseout="hideStar('.star6')" style="grid-row: 6;">
-            T </div>
+            Н </div>
+        <div class="star7"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star7')" onmouseout="hideStar('.star7')" style="grid-row: 7;">
+            А </div>
+        <div class="star8"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star8')" onmouseout="hideStar('.star8')" style="grid-row: 8;">
+            Я </div>
         
     </div>
     <script src="js/script.js"></script>
