--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         <div class="star8"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star8')" onmouseout="hideStar('.star8')" style="grid-row: 8;">
             Я </div>
+        <div class="centeredLg" onmouseover="showStar('.star9')" onmouseout="hideStar('.star9')" style="grid-row: 10;">
+            H </div>
+        <div class="star6"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star10')" onmouseout="hideStar('.star10')" style="grid-row: 11;">
+            O </div>
+        <div class="star7"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star11')" onmouseout="hideStar('.star11')" style="grid-row: 12;">
+            Ч </div>
+        <div class="star8"><div class="star-five"></div></div>
+        <div class="centeredLg" onmouseover="showStar('.star12')" onmouseout="hideStar('.star12')" style="grid-row: 13;">
+            Ь </div>
         
     </div>
     <script src="js/script.js"></script>
