placed stars CSS

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <div class="star8"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star8')" onmouseout="hideStar('.star8')" style="grid-row: 8;">
             Я </div>
+        <div class="star8"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star9')" onmouseout="hideStar('.star9')" style="grid-row: 10;">
             H </div>
         <div class="star6"><div class="star-five"></div></div>
