--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         <div class="star12"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star12')" onmouseout="hideStar('.star12')" style="grid-row: 13;">
             Ь </div>
-        
+    </div>
+    <div class="text-grid-container">
+
     </div>
     <script src="js/script.js"></script>
 </body>
