--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>COMMITMENT</title>
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Oleo+Script|Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="grid-container">
@@ -28,6 +29,17 @@
     <div class="">
         <div class="fullwidth">
             <img src="img/rh/rh1.png" alt="rose hand" id="rh" onmouseover="runAnimation()" onmouseout="stopAnimation()">
+        </div>
+    </div>
+    <div class="text-grid-container">
+        <div class="ladies1">
+            Ladies
+        </div>
+        <div class="ladies2">
+            Ladies
+        </div>
+        <div class="ladies3">
+            Ladies
         </div>
     </div>
     <!-- Звездная ночь ЗВЕЗДНАЯ НОЧЬ -->
@@ -68,9 +80,6 @@
         <div class="star12"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star12')" onmouseout="hideStar('.star12')" style="grid-row: 13;">
             Ь </div>
-    </div>
-    <div class="text-grid-container">
-
     </div>
     <script src="js/script.js"></script>
 </body>
