--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <div class="ladies3">
             Ladies
         </div>
+        <div class="and">
+            Ladies
+        </div>
+        <div class="gentelemen">
+            Ladies
+        </div>
     </div>
     <!-- Звездная ночь ЗВЕЗДНАЯ НОЧЬ -->
     <div class="star-grid-container">
