--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Ladies
         </div>
         <div class="and">
-            Ladies
+            And
         </div>
         <div class="gentelemen">
             Ladies
