--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="img/rh/rh1.png" alt="rose hand" id="rh" onmouseover="runAnimation()" onmouseout="stopAnimation()">
         </div>
     </div>
-    <div class="text-grid-container">
+    <div class="text-grid-container-1">
         <div class="ladies1">
             Ladies
         </div>
@@ -41,15 +41,14 @@
         <div class="ladies3">
             Ladies
         </div>
-        <div class="and">
-            And
-        </div>
-        <div class="gentelemen">
-            Ladies
+    </div>
+    <div class="text-grid-container-2">
+        <div class="speed">
+            START YOUR ENGINES
         </div>
     </div>
     <!-- Звездная ночь ЗВЕЗДНАЯ НОЧЬ -->
-    <div class="star-grid-container">
+    <!-- <div class="star-grid-container">
         <div class="star1"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star1')" onmouseout="hideStar('.star1')" style="grid-row: 1;">
             З </div>
@@ -86,7 +85,7 @@
         <div class="star12"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star12')" onmouseout="hideStar('.star12')" style="grid-row: 13;">
             Ь </div>
-    </div>
+    </div> -->
     <script src="js/script.js"></script>
 </body>
 </html>
