--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         </div>
     </div>
     <div class="text-grid-container-2">
+        <div class="and">
+            AND
+        </div>
+        <div class="gentlemen">
+            GENTLEMEN
+        </div>
         <div class="speed">
             START YOUR ENGINES
         </div>
