--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="and">
             AND
         </div>
-        <div class="gentlemen">
+        <div class="gentlemen1">
             GENTLEMEN
         </div>
         <div class="speed">
