--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <div class="gentlemen1">
             GENTLEMEN
         </div>
+        <div class="gentlemen2">
+            GENTLEMEN
+        </div>
+        <div class="gentlemen3">
+            GENTLEMEN
+        </div>
         <div class="speed">
             START YOUR ENGINES
         </div>
