--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
         <div class="gentlemen3">
             GENTLEMEN
         </div>
+        <div class="gentlemen4">
+            GENTLEMEN
+        </div>
+        <div class="gentlemen5">
+            GENTLEMEN
+        </div>
         <div class="speed">
             START YOUR ENGINES
         </div>
