start ur engines

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         <div class="gentlemen5">
             GENTLEMEN
         </div>
+    </div>
+    <div class="text-grid-container-3">
         <div class="speed">
             START YOUR ENGINES
         </div>
