--- a/index.html
+++ b/index.html
@@ -63,7 +63,19 @@
         </div>
     </div>
     <div class="text-grid-container-3">
-        <div class="speed">
+        <div class="speed1">
+            START YOUR ENGINES
+        </div>
+        <div class="speed2">
+            START YOUR ENGINES
+        </div>
+        <div class="speed3">
+            START YOUR ENGINES
+        </div>
+        <div class="speed4">
+            START YOUR ENGINES
+        </div>
+        <div class="speed5">
             START YOUR ENGINES
         </div>
     </div>
