--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
             START YOUR ENGINES
         </div>
     </div>
+    <div class="text-grid-container-4">
+        <div class="andmaythebest">
+            AND MAY THE BEST
+        </div>
+    </div>
     <!-- Звездная ночь ЗВЕЗДНАЯ НОЧЬ -->
     <!-- <div class="star-grid-container">
         <div class="star1"><div class="star-five"></div></div>
