--- a/index.html
+++ b/index.html
@@ -85,44 +85,30 @@
         </div>
     </div>
     <!-- Звездная ночь ЗВЕЗДНАЯ НОЧЬ -->
-    <!-- <div class="star-grid-container">
+    <div class="star-grid-container">
         <div class="star1"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star1')" onmouseout="hideStar('.star1')" style="grid-row: 1;">
-            З </div>
+            A </div>
         <div class="star2"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star2')" onmouseout="hideStar('.star2')" style="grid-row: 2;">
-            В </div>
+            L </div>
         <div class="star3"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star3')" onmouseout="hideStar('.star3')" style="grid-row: 3;">
-            Е </div>
+            L </div>
         <div class="star4"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star4')" onmouseout="hideStar('.star4')" style="grid-row: 4;">
-            З </div>
+            S </div>
         <div class="star5"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star5')" onmouseout="hideStar('.star5')" style="grid-row: 5;">
-            Д </div>
+            T </div>
         <div class="star6"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star6')" onmouseout="hideStar('.star6')" style="grid-row: 6;">
-            Н </div>
+            A </div>
         <div class="star7"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star7')" onmouseout="hideStar('.star7')" style="grid-row: 7;">
-            А </div>
-        <div class="star8"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star8')" onmouseout="hideStar('.star8')" style="grid-row: 8;">
-            Я </div>
-        <div class="star9"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star9')" onmouseout="hideStar('.star9')" style="grid-row: 10;">
-            H </div>
-        <div class="star10"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star10')" onmouseout="hideStar('.star10')" style="grid-row: 11;">
-            O </div>
-        <div class="star11"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star11')" onmouseout="hideStar('.star11')" style="grid-row: 12;">
-            Ч </div>
-        <div class="star12"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star12')" onmouseout="hideStar('.star12')" style="grid-row: 13;">
-            Ь </div>
-    </div> -->
+            R </div>
+        
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
