--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
             START YOUR ENGINES
         </div>
     </div>
-    <!-- Звездная ночь ЗВЕЗДНАЯ НОЧЬ -->
-    <!-- <div class="star-grid-container">
+    <div class="star-grid-container">
         <div class="star1"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star1')" onmouseout="hideStar('.star1')" style="grid-row: 1;">
+        <div class="centeredLg" onmouseover="showStar('.star1')" onmouseout="hideStar('.star1')" style="grid-column: 3;">
             З </div>
         <div class="star2"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star2')" onmouseout="hideStar('.star2')" style="grid-row: 2;">
@@ -117,7 +116,7 @@
         <div class="star12"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star12')" onmouseout="hideStar('.star12')" style="grid-row: 13;">
             Ь </div>
-    </div> -->
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
