--- a/index.html
+++ b/index.html
@@ -79,27 +79,33 @@
             START YOUR ENGINES
         </div>
     </div>
+    <div class="text-grid-container-4">
+        <div class="andmaythebest">
+            AND MAY THE BEST
+        </div>
+    </div>
+    <!-- Звездная ночь ЗВЕЗДНАЯ НОЧЬ -->
     <div class="star-grid-container">
         <div class="star1"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star1')" onmouseout="hideStar('.star1')" style="grid-column: 4;">
+        <div class="centeredLg" onmouseover="showStar('.star1')" onmouseout="hideStar('.star1')" style="grid-row: 1;">
             A </div>
         <div class="star2"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star2')" onmouseout="hideStar('.star2')" style="grid-column: 5;">
+        <div class="centeredLg" onmouseover="showStar('.star2')" onmouseout="hideStar('.star2')" style="grid-row: 2;">
             L </div>
         <div class="star3"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star3')" onmouseout="hideStar('.star3')" style="grid-column: 6;">
+        <div class="centeredLg" onmouseover="showStar('.star3')" onmouseout="hideStar('.star3')" style="grid-row: 3;">
             L </div>
         <div class="star4"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star4')" onmouseout="hideStar('.star4')" style="grid-column: 7;">
+        <div class="centeredLg" onmouseover="showStar('.star4')" onmouseout="hideStar('.star4')" style="grid-row: 4;">
             S </div>
         <div class="star5"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star5')" onmouseout="hideStar('.star5')" style="grid-column: 8;">
+        <div class="centeredLg" onmouseover="showStar('.star5')" onmouseout="hideStar('.star5')" style="grid-row: 5;">
             T </div>
         <div class="star6"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star6')" onmouseout="hideStar('.star6')" style="grid-column: 9;">
+        <div class="centeredLg" onmouseover="showStar('.star6')" onmouseout="hideStar('.star6')" style="grid-row: 6;">
             A </div>
         <div class="star7"><div class="star-five"></div></div>
-        <div class="centeredLg" onmouseover="showStar('.star7')" onmouseout="hideStar('.star7')" style="grid-column: 10;">
+        <div class="centeredLg" onmouseover="showStar('.star7')" onmouseout="hideStar('.star7')" style="grid-row: 7;">
             R </div>
     </div>
     <script src="js/script.js"></script>
