--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         <div class="star7"><div class="star-five"></div></div>
         <div class="centeredLg" onmouseover="showStar('.star7')" onmouseout="hideStar('.star7')" style="grid-row: 7;">
             R </div>
-<<<<<<< HEAD
-        
-=======
->>>>>>> stars
+    </div>
+
+    <div class="win-container">
+        WIN
     </div>
     <script src="js/script.js"></script>
 </body>
