--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>COMMITMENT</title>
     <link rel="stylesheet" href="css/stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Oleo+Script|Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="grid-container">
