--- a/index.html
+++ b/index.html
@@ -110,8 +110,11 @@
             R </div>
     </div>
 
-    <div class="win-container">
+    <div class="win">
         WIN
+    </div>
+    <div class="win-top">
+        win
     </div>
     <script src="js/script.js"></script>
 </body>
