--- a/index.html
+++ b/index.html
@@ -110,12 +110,14 @@
             R </div>
     </div>
 
-    <div class="win">
-        WIN
-    </div>
-    <div class="win-top">
-        win
-    </div>
+    <section>
+        <div class="win">
+            WIN
+        </div>
+        <div class="win-top">
+            win
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
