--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Oleo+Script|Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Meie+Script&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="grid-container">
@@ -110,7 +111,7 @@
             R </div>
     </div>
 
-    <section>
+    <section class="win-div">
         <div class="win">
             WIN
         </div>
