--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         <div class="win-top">
             win
         </div>
+        <div class="win-top-2">
+            win
+        </div>
     </section>
     <script src="js/script.js"></script>
 </body>
