--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             <img src="img/rh/rh1.png" alt="rose hand" id="rh" onmouseover="runAnimation()" onmouseout="stopAnimation()">
         </div>
     </div>
-    
+
+    <div></div>
     <script src="js/script.js"></script>
 </body>
 </html>
