--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
         </div>
     </div>
 
-    
+    <div class="">
+        <div class="fullwidth">
+            <img src="img/rh/rh1.png" alt="rose hand" id="rh" onmouseover="runAnimation()" onmouseout="stopAnimation()">
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
