--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
             R </div>
     </div>
 
-    <!-- <section class="win-div">
+    <section class="win-div">
         <div class="win">
             WIN
         </div>
         <div class="win-top">
             win
         </div>
-    </section> -->
+    </section>
 
     <div class="">
         <div class="fullwidth">
