--- a/index.html
+++ b/index.html
@@ -127,8 +127,12 @@
 
 
 
+    <div class="">
+        <div class="fullwidth">
+            <img src="img/rh/rh1.png" alt="rose hand" id="rh" onmouseover="runAnimation()" onmouseout="stopAnimation()">
+        </div>
+    </div>
 
-    
     <script src="js/script.js"></script>
 </body>
 </html>
