--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
         </div>
     </div>
 
+    <section class="meme-cats">
+        <div class="cat1">
+
+        </div>
+    </section>
+
 
     <script src="js/script.js"></script>
 </body>
