--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@
     </div>
 
     <section class="meme-cats">
-        <div class="cat1">
-
+        <div class="half-cat">
+            <img src="img/cat.jpg" alt="meme cat">
         </div>
+        <div class="half-cat"></div>
     </section>
 
 
