--- a/index.html
+++ b/index.html
@@ -126,9 +126,15 @@
 
     <section class="meme-cats">
         <div class="half-cat">
-            <img src="img/cat.jpg" alt="meme cat">
+            <img src="img/cat.jpg" alt="polite cat">
         </div>
         <div class="half-cat"></div>
+
+        <div class="third-cat"></div>
+        <div class="third-cat"></div>
+        <div class="third-cat">
+            <img src="img/crying.jpg" alt="crying cat">
+        </div>
     </section>
 
 
