--- a/index.html
+++ b/index.html
@@ -135,6 +135,19 @@
         <div class="third-cat">
             <img src="img/crying.jpg" alt="crying cat">
         </div>
+
+        <div class="third-cat">
+            <img src="img/cursedcat.jpg" alt="cursed cat">
+        </div>
+        <div class="third-cat"></div>
+        <div class="third-cat"></div>
+
+        <div class="third-cat"></div>
+        <div class="third-cat">
+            <img src="img/smudge.jpg" alt="smudge">
+        </div>
+        <div class="third-cat"></div>
+
     </section>
 
 
