--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
         <div class="third-cat"></div>
         <div class="third-cat"></div>
 
+        <div class="half-cat"></div>
+        <div class="half-cat">
+            <img src="img/blackcat.jpg" alt="black cat">
+        </div>
+
         <div class="third-cat"></div>
         <div class="third-cat">
             <img src="img/smudge.jpg" alt="smudge">
