--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
     <section class="meme-cats">
         <div class="half-cat">
             <img src="img/cat.jpg" alt="polite cat">
+            <div class="overlay"></div>
         </div>
         <div class="half-cat"></div>
 
