overlays to all

--- a/index.html
+++ b/index.html
@@ -135,10 +135,12 @@
         <div class="third-cat"></div>
         <div class="third-cat">
             <img src="img/crying.jpg" alt="crying cat">
+            <div class="overlay"></div>
         </div>
 
         <div class="third-cat">
             <img src="img/cursedcat.jpg" alt="cursed cat">
+            <div class="overlay"></div>
         </div>
         <div class="third-cat"></div>
         <div class="third-cat"></div>
@@ -146,11 +148,13 @@
         <div class="half-cat"></div>
         <div class="half-cat">
             <img src="img/blackcat.jpg" alt="black cat">
+            <div class="overlay"></div>
         </div>
 
         <div class="third-cat"></div>
         <div class="third-cat">
             <img src="img/smudge.jpg" alt="smudge">
+            <div class="overlay"></div>
         </div>
         <div class="third-cat"></div>
 
