--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <section class="meme-cats">
         <div class="half-cat">
             <img src="img/cat.jpg" alt="polite cat">
-            <div class="overlay"></div>
+            <div class="overlay" id="polite-cat"></div>
         </div>
         <div class="half-cat"></div>
 
@@ -135,12 +135,12 @@
         <div class="third-cat"></div>
         <div class="third-cat">
             <img src="img/crying.jpg" alt="crying cat">
-            <div class="overlay"></div>
+            <div class="overlay" id="crying-cat"></div>
         </div>
 
         <div class="third-cat">
             <img src="img/cursedcat.jpg" alt="cursed cat">
-            <div class="overlay"></div>
+            <div class="overlay" id="cursed-cat"></div>
         </div>
         <div class="third-cat"></div>
         <div class="third-cat"></div>
@@ -148,13 +148,13 @@
         <div class="half-cat"></div>
         <div class="half-cat">
             <img src="img/blackcat.jpg" alt="black cat">
-            <div class="overlay"></div>
+            <div class="overlay" id="black-cat"></div>
         </div>
 
         <div class="third-cat"></div>
         <div class="third-cat">
             <img src="img/smudge.jpg" alt="smudge">
-            <div class="overlay"></div>
+            <div class="overlay" id="smudge"></div>
         </div>
         <div class="third-cat"></div>
 
