overlays js works

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 
     <section class="meme-cats">
         <div class="half-cat">
-            <img src="img/cat.jpg" alt="polite cat">
-            <div class="overlay" id="polite-cat"></div>
+            <img src="img/cat.jpg" alt="polite cat" >
+            <div class="overlay" id="polite-cat" onclick="showCat('polite-cat')"></div>
         </div>
         <div class="half-cat"></div>
 
