--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
         <div class="third-cat"></div>
         <div class="third-cat">
             <img src="img/crying.jpg" alt="crying cat">
-            <div class="overlay" id="crying-cat"></div>
+            <div class="overlay" id="crying-cat" onclick="showCat('crying-cat')"></div>
         </div>
 
         <div class="third-cat">
             <img src="img/cursedcat.jpg" alt="cursed cat">
-            <div class="overlay" id="cursed-cat"></div>
+            <div class="overlay" id="cursed-cat" onclick="showCat('cursed-cat')"></div>
         </div>
         <div class="third-cat"></div>
         <div class="third-cat"></div>
@@ -148,13 +148,13 @@
         <div class="half-cat"></div>
         <div class="half-cat">
             <img src="img/blackcat.jpg" alt="black cat">
-            <div class="overlay" id="black-cat"></div>
+            <div class="overlay" id="black-cat" onclick="showCat('black-cat')"></div>
         </div>
 
         <div class="third-cat"></div>
         <div class="third-cat">
             <img src="img/smudge.jpg" alt="smudge">
-            <div class="overlay" id="smudge"></div>
+            <div class="overlay" id="smudge" onclick="showCat('smudge')"></div>
         </div>
         <div class="third-cat"></div>
 
